# ChangeLog for dev-ruby/coderay
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/coderay/ChangeLog,v 1.52 2012/06/25 06:06:31 graaff Exp $

  25 Jun 2012; Hans de Graaff <graaff@gentoo.org> coderay-1.0.6.ebuild:
  Avoid unneeded dependency on git.

*coderay-1.0.6 (07 Apr 2012)

  07 Apr 2012; Hans de Graaff <graaff@gentoo.org> +coderay-1.0.6.ebuild:
  Version bump.

  08 Mar 2012; Brent Baude <ranger@gentoo.org> coderay-0.9.8.ebuild:
  Marking coderay-0.9.8 ppc64 for bug 393665

  06 Feb 2012; Brent Baude <ranger@gentoo.org> coderay-0.9.8.ebuild:
  Marking coderay-0.9.8 ppc for bug 393665

*coderay-1.0.5 (14 Jan 2012)

  14 Jan 2012; Hans de Graaff <graaff@gentoo.org> +coderay-1.0.5.ebuild:
  Version bump.

  31 Dec 2011; Fabian Groffen <grobian@gentoo.org> coderay-1.0.4.ebuild:
  Add Prefix keywords, bug #396547

  18 Dec 2011; Raúl Porcel <armin76@gentoo.org> coderay-0.9.8.ebuild:
  ia64/sparc stable wrt #393665

  15 Dec 2011; Agostino Sarubbo <ago@gentoo.org> coderay-0.9.8.ebuild:
  Stable for AMD64, wrt bug #393665

  14 Dec 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org> coderay-0.9.8.ebuild:
  x86 stable wrt bug #393665

  12 Dec 2011; Jeroen Roovers <jer@gentoo.org> coderay-0.9.8.ebuild:
  Stable for HPPA (bug #393665).

*coderay-1.0.4 (08 Dec 2011)

  08 Dec 2011; Diego E. Pettenò <flameeyes@gentoo.org> +coderay-1.0.4.ebuild,
  -coderay-0.9.7.ebuild, coderay-0.9.8.ebuild, coderay-1.0.0.ebuild:
  Version bump, remove JRuby support due to the known-broken tests; drop ruby
  1.9 support from coderay 0.9.8 so that we can ask stable. Replace the old
  syntax for ruby_add_bdepend.

  03 Oct 2011; Jeroen Roovers <jer@gentoo.org> coderay-0.9.6.ebuild:
  Stable for HPPA (bug #385149).

*coderay-1.0.0 (27 Sep 2011)

  27 Sep 2011; Hans de Graaff <graaff@gentoo.org> +coderay-1.0.0.ebuild:
  Version bump.

  21 Sep 2011; Hans de Graaff <graaff@gentoo.org> +coderay-0.9.7.ebuild: