@@ -1,6 +1,11 @@
 # ChangeLog for dev-ruby/coderay
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/coderay/ChangeLog,v 1.52 2012/06/25 06:06:31 graaff Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/coderay/ChangeLog,v 1.53 2012/07/05 23:49:05 flameeyes Exp $
+
+*coderay-1.0.7 (05 Jul 2012)
+
+  05 Jul 2012; Diego E. Pettenò <flameeyes@gentoo.org> +coderay-1.0.7.ebuild:
+  Version bump; reinstate jruby support.
 
   25 Jun 2012; Hans de Graaff <graaff@gentoo.org> coderay-1.0.6.ebuild:
   Avoid unneeded dependency on git.
@@ -210,4 +215,3 @@
   16 Jan 2008; Aggelos Orfanakos <agorf@gentoo.org> +metadata.xml,
   +coderay-0.7.4.215.ebuild:
   Initial import.
-
